<resources>

    <!--Application-->
    <string name="app_name">DH-Device</string>
    <string name="menu_settings">Settings</string>
    <string name="key_device_registration">H9ZveEeu2nx19Vqe2Auszgixj/b2Z8t21MjtktWMivw=</string>

    <!--Startup Activity-->
    <string name="title_activity_configuration">Startup Configuration</string>
    <string name="welcome">Welcome to DeviceHive</string>
    <string name="device">Device</string>
    <string name="api_endpoint">API Endpoint</string>
    <string name="logo_content_description">logo</string>
    <string name="empty_api_endpoint">You must enter server URL.</string>

    <!--Networks Activity-->
    <string name="title_activity_network_configuration">Network Configuration</string>
    <string name="network_configuration">Network Configuration</string>
    <string name="create_new_network">Create new network</string>
    <string name="network_name">Network name</string>
    <string name="network_description">Network description</string>
    <string name="existing_one">or choose from existing one</string>
    <string name="hint_optional">(Optional)</string>
    <string name="empty_network_name">You must enter Network name.</string>
    <string name="empty_network_description">You must enter Network description.</string>
    <string name="new_network">New network</string>

    <!--Device Activity-->
    <string name="tab_device_info">Info</string>
    <string name="tab_device_equipment">Equipment</string>
    <string name="tab_device_commands">Commands</string>
    <string name="tab_device_send_notification">Send Notification</string>
    <string name="action_settings">Settings</string>
    <string name="device_not_registered">Device not registered !!!</string>

    <!--Settings Activity-->
    <string name="title_activity_settings">Settings</string>

    <!--Info Fragment-->
    <string name="tv_title_device">Device</string>
    <string name="tv_content_device_name">Device Name</string>
    <string name="tv_content_device_board">Device Board</string>
    <string name="tv_content_device_id">Device ID</string>
    <string name="tv_content_device_status">Device Status</string>
    <string name="tv_content_device_time_on">Device Time On</string>
    <string name="tv_content_device_battery">Device Battery</string>
    <string name="tv_content_device_class_type">Type</string>
    <string name="tv_content_device_class_version">Version</string>
    <string name="tv_content_device_class_is_permanent">Is Permanent</string>
    <string name="tv_content_device_network_name">Name</string>
    <string name="tv_content_device_network_description">Description</string>
    <string name="tv_title_device_network">Device Network</string>
    <string name="tv_title_device_class">Device Class</string>
    <string name="tv_calculating">calculating</string>
    <string name="empty">--</string>

    <!--Equipment Fragment-->
    <string name="tv_equipment_code">Code</string>
    <string name="tv_equipment_code_empty">Equipment code</string>
    <string name="et_equipment_name">Equipment name</string>
    <string name="tv_equipment_type">Type</string>
    <string name="tv_equipment_type_empty">Equipment type</string>

    <!--Commands Fragment-->
    <string name="command_name">Command name</string>
    <string name="command_params">Command params</string>

    <!--Send Notifications Fragment-->
    <string name="hint_notification_name">notification name</string>
    <string name="equipment">Equipment</string>

</resources>